Migrate powsybl-parent to v29 and to new checkstyle (#222)
Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>